--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.9.0"
   },
   "scripts": {
-    "test": "node rsync.js && node build_2.js && node push.js",
+    "test": "node rsync.js",
     "dev": "hexo server -p 5000",
     "build": "node build.js && hexo clean && hexo g",
     "push": "node rsync.js && node build_2.js && node push.js &&  git add . && git commit -m 'zhaoolee commit' && git push",
