--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "node rsync.js",
     "dev": "hexo server -p 5000",
     "build": "node build.js && hexo clean && hexo g",
-    "push": "node rsync.js && node build_2.js && node push.js &&  git add . && git commit -m 'zhaoolee commit' && git push",
+    "push": "node rsync.js && node build_2.js && node push.js && node create_bqb_image_list.js &&  git add . && git commit -m 'zhaoolee commit' && git push",
     "clean": "hexo clean",
     "start": "hexo server",
     "new": "hexo new post article-$(date '+%Y-%m-%d-%H-%M-%S')"
