--- a/package.json
+++ b/package.json
@@ -2,20 +2,15 @@
   "name": "ChineseBQB",
   "version": "1.0.0",
   "description": "[![](https://img.shields.io/badge/ChineseBQB-READEME-brightgreen)](https://github.com/zhaoolee/ChineseBQB)",
-  "main": "build.js",
   "directories": {
     "doc": "docs"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node rsync.js",
+    "test": "echo 'hello'",
     "dev": "hexo server -p 5000",
     "build": "node build.js && hexo clean && hexo g",
-    "push": "chmod -R 777 *BQB &&node create_bqb_image_list.js && node rsync.js && node build_2.js && node push.js  &&  git add . && git commit -m 'zhaoolee commit' && git push",
-    "clean": "hexo clean",
-    "start": "hexo server",
-    "new": "hexo new post article-$(date '+%Y-%m-%d-%H-%M-%S')",
-    "install": "npm i --no-bin-links"
+    "push": "chmod -R 777 *BQB &&node create_bqb_image_list.js && node rsync.js && node build_2.js && node push.js  &&  git add . && git commit -m 'zhaoolee commit' && git push"
   },
   "dependencies": {
     "axios": "0.19.0",
