--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "test": "echo 'hello'",
     "dev": "hexo server -p 5000",
     "build": "node build.js && hexo clean && hexo g",
-    "push": "chmod -R 777 *BQB &&node create_bqb_image_list.js && node rsync.js && node build_2.js && node push.js  &&  git add . && git commit -m 'zhaoolee commit' && git push"
+    "push": "chmod -R 777 *BQB &&node create_bqb_image_list.js && node rsync.js && node build.js && node push.js  &&  git add . && git commit -m 'zhaoolee commit' && git push"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
     "axios": "0.19.0",
     "chmodr": "1.2.0",
     "download": "7.1.0",
-    "fs-extra": "8.1.0",
+    "fs-extra": "^8.1.0",
     "moment": "2.24.0",
     "rsync": "0.6.1",
     "showdown": "1.9.1"
